<resources>
    <string name="app_name">Control de Entregas</string>
    <string name="btnIngresar">INGRESAR</string>

    <string name="registrousuario">REGISTRO USUARIO</string>


    <string name="guardarClave">Guardar Contraseña</string>
    <string name="olvido">¿Olvido Contraseña?</string>
    <string name="celular">Celular</string>
    <string name="correo">Usuario|Correo</string>
    <string name="password">Contraseña</string>
    <string name="nombre">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="fecNac">Fecha de nacimiento</string>
    <string name="correo1">Correo</string>
    <string name="proposito">Porposito</string>
    <string name="saldocritico">Saldo mínimo</string>


    <string name="pedidosPendientes">Pedidos Pendientes</string>

    <string name="aceptar">ACEPTAR</string>
    <string name="acepatr1">Aceptar Terminos</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Log out</string>
    <string name="cantidad">Cantidad: </string>
    <string name="current">S/.</string>
    <string name="Total">Total S/.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragmenTitulo">Detalle Compra</string>
    <string name="fragmenNombre">Nombre</string>
    <string name="fragmentCelular">Celular</string>
    <string name="fragmentCorreo">Correo</string>
    <string name="fragmentTitulo2">Lista de Productos</string>
    <string name="fragmentMontoTotal">Monto Total</string>
    <string name="fragmentVerDireccion">Ver Dirección</string>
    <string name="fragmentGuardar">GUARDAR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
