<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.armaelpack.armaelpack_envios.DetalleEnvio">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fragmenTitulo"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/fragmenNombre"/>
            <TextView
                android:text="Adrian Cucho Arhuis"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:id="@+id/tvNombreClienteFrag"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/fragmentCelular"/>
            <TextView
                android:text="949252023"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:id="@+id/tvCelularFragment"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/fragmentCorreo"/>
            <TextView
                android:text="adriancucho@gmail.com"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:id="@+id/tvCorreoFragmentFragment"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="25sp"
        android:text="@string/fragmentTitulo2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ListView
            android:id="@+id/lvDetalle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>
    </LinearLayout>
<LinearLayout
    android:layout_margin="10dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:textSize="15sp"
        android:text="@string/Total"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="5000.00"/>
</LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnVerDireccion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/fragmentVerDireccion"
            android:textSize="20sp" />

        <!--
        <Button
            android:id="@+id/btnGrabar"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/fragmentGuardar"/>
            -->

    </RelativeLayout>


</LinearLayout>
