<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blanco"
    tools:context="com.armaelpack.armaelpack_envios.Logueo">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="160dp">
            <ImageView
                android:layout_width="250dp"
                android:layout_marginTop="30dp"
                android:layout_height="100dp"
                android:background="@drawable/logoprueba"
                android:layout_gravity="center"/>

        </LinearLayout>




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/correo">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>




        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/guardarClave" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/olvido" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">
          <!--  <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnPrueba"/>-->

            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/toolbarcolor"
                android:text="@string/btnIngresar"
                android:textColor="@color/blanco"
                android:textSize="@dimen/boton1" />
        </RelativeLayout>


    </LinearLayout>




</LinearLayout>
